--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,11 @@
     <string name="empty_search">抱歉,没有找到您想要的小说</string>
     <string name="empty_chapter">恭喜您发现一本无字天书</string>
 
-    
+    <!-- Update -->
+    <string name="update_title">版本更新</string>
+    <string name="update_message">发现新版本%s,是否立即更新?</string>
+    <string name="update_sure">立即更新</string>
+    <string name="update_cancel">暂不更新</string>
+    <string name="update_current_is_latest">没有发现可更新版本</string>
 
 </resources>
