--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="str_book_finish">完结</string>
     <string name="str_book_publishing">连载中</string>
     <string name="str_lagel">加载中...</string>
-    <string name="remove_from_bookshelf">加载中...</string>
+    <string name="remove_from_bookshelf">移出书架</string>
 
     <!-- BookIntro -->
     <string name="book_intro_detail">小说详情</string>
