Modified the app name ,app icon, actionbar logo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Config -->
-    <string name="app_name">奇文阁</string>
+    <string name="app_name">书吧</string>
     <string name="UMENG_APPKEY">5368adef56240b3e410337a7</string>
     <string name="JPUSH_APPKEY">f0638222933af84af96ecad9</string>
 
