Change 书架 to 收藏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- Common -->
     <string name="double_click_to_quit">双击返回键,退出书吧</string>
     <string name="str_share_format">%s (分享自 @书吧)</string>
-    <string name="str_book_shelf">书架</string>
+    <string name="str_book_shelf">收藏</string>
     <string name="str_book_library">发现</string>
     <string name="str_set">设置</string>
     <string name="str_empty"></string>
@@ -29,7 +29,7 @@
     <string name="book_intro_category_format">类型 : %s</string>
     <string name="book_intro_status_format">状态 : %s</string>
     <string name="book_intro_chapters">查看目录</string>
-    <string name="book_intro_add">加入书架</string>
+    <string name="book_intro_add">收藏</string>
     <string name="book_intro_remove">移出书架</string>
     <string name="book_intro_read_continue">继续阅读</string>
     <string name="book_intro_related">相关推荐</string>
