--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="str_share_format">%s (分享自 @书吧)</string>
     <string name="str_book_shelf">收藏</string>
     <string name="str_book_library">发现</string>
+    <string name="str_me">我</string>
     <string name="str_set">设置</string>
     <string name="str_empty"></string>
     <string name="str_intro">简介</string>
@@ -22,6 +23,7 @@
     <string name="str_book_publishing">连载中</string>
     <string name="str_lagel">加载中...</string>
     <string name="remove_from_bookshelf">取消收藏</string>
+    <string name="str_search_hint">请输入书名或者作者</string>
 
     <!-- BookIntro -->
     <string name="book_intro_detail">小说详情</string>
@@ -60,11 +62,6 @@
     <string name="feedback_chooser_title">意见反馈</string>
     <string name="feedback_hint">意见反馈</string>
 
-    <!-- Empty -->
-    <string name="empty_bookshelf">孤独的小树, 需要书的陪伴</string>
-    <string name="empty_search">抱歉,没有找到您想要的小说</string>
-    <string name="empty_chapter">恭喜您发现一本无字天书</string>
-
     <!-- Update -->
     <string name="update_title">版本更新</string>
     <string name="update_message">发现新版本%s,是否立即更新?</string>
@@ -79,6 +76,7 @@
     <!-- ActionBar -->
     <string name="action_search">搜索</string>
     <string name="action_search_hint">搜索...</string>
+    <string name="action_login">登陆</string>
     <string name="action_setting">设置</string>
     <string name="action_feedback">意见反馈</string>
     <string name="action_more">更多</string>
@@ -86,6 +84,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_send">发送</string>
+    <string name="title_activity_book">BookActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Empty -->
+    <string name="empty_bookshelf">孤独的小树, 需要书的陪伴</string>
+    <string name="empty_search">没有找到您想要的小说</string>
+    <string name="empty_chapter">恭喜您发现一本无字天书</string>
 
 </resources>
