--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="JPUSH_APPKEY">f0638222933af84af96ecad9</string>
 
     <!-- Common -->
+    <string name="str_retry">重试</string>
     <string name="str_cancel">取消</string>
     <string name="str_sure">确定</string>
     <string name="double_click_to_quit">双击返回键,退出书吧</string>
@@ -97,6 +98,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Empty -->
+    <string name="empty_defualt">加载失败, 请检查您的网络设置</string>
     <string name="empty_bookshelf">孤独的小树, 需要书的陪伴</string>
     <string name="empty_search">没有找到您想要的小说</string>
     <string name="empty_chapter">恭喜您发现一本无字天书</string>
