--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="str_search_hint">请输入书名或者作者</string>
     <string name="choose_login_type">请选择登录方式</string>
     <string name="login_desc">登录后同步书架和阅读进度</string>
+    <string name="updated">已更新</string>
 
     <!-- BookIntro -->
     <string name="book_intro_detail">小说详情</string>
