--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,9 +75,9 @@
 
     <!-- Update -->
     <string name="update_title">版本更新</string>
-    <string name="update_message">发现新版本%s,是否立即更新?</string>
+    <string name="update_message">发现新版本%s, 是否立即更新?</string>
     <string name="update_sure">立即更新</string>
-    <string name="update_cancel">暂不更新</string>
+    <string name="update_cancel">稍后再说</string>
     <string name="update_current_is_latest">当前版本已经为最新版本</string>
 
     <!-- Read -->
